<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Parametry" Id="{a710716c-0c46-49ed-bfcd-a6b5c3064ce3}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stSymulacja								: DUT_Symulacja_Parametry;
	stKrajalnica							: DUT_Krajalnica_Parametry;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>