<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="MAIN" Id="{73f1b474-f0bd-432f-99c4-c461b6a71c21}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	bKonfiguruj								: BOOL := TRUE;
	
	fbWizualizacja							: FB_Wizualizacja;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF (bKonfiguruj) THEN
	A_Konfiguracja ();
	bKonfiguruj								:= FALSE;
END_IF
//--------LOGER
	GVL_LogowanieBledow.fbLoger (arrZdarzeniaPamietane 		:= GVL_LogowanieBledow.arrTablicaZdarzenZapamietancyh,
								iIloscZdarzenZapamietanych 	:= GVL_LogowanieBledow.iIloscZdarzenZapamietanych,
								bWyswietlanieTablicyAlarmow	:= GVL_LogowanieBledow.bWyswietlAlarmy);
//--------LOGER
//--------STEROWANIE MASZYNĄ
GVL_StanMaszyny.fbStanMaszyny(
	bStart				:= GVL_StanMaszyny.bStart OR GVL_ElementySterujace.fbElementySterujace.NacisnietyStart, 
	bStop				:= GVL_StanMaszyny.bStop OR GVL_ElementySterujace.fbElementySterujace.NacisnietyStop, 
	bReset				:= GVL_StanMaszyny.bReset, 
	bAbort				:= GVL_StanMaszyny.bAbort, 
	bClear				:= GVL_StanMaszyny.bClear, 
	bHold				:= GVL_StanMaszyny.bHold, 
	bUnHold				:= GVL_StanMaszyny.bUnhold, 
	bSuspend			:= GVL_StanMaszyny.bSuspend, 
	bUnsuspend			:= GVL_StanMaszyny.bUnsuspend,
	eTryb				:= GVL_StanMaszyny.eTrybPracy);


GVL_ElementySterujace.fbElementySterujace ();
GVL_ElementySterujace.fbElementySterujace.StanMaszyny	:= GVL_StanMaszyny.fbStanMaszyny.StanPracy;
GVL_ElementySterujace.fbElementySterujace.TrybPracy		:= GVL_StanMaszyny.fbStanMaszyny.TrybPracy;
//--------STEROWANIE MASZYNĄ

GVL_Podzespoly.fbSymulacja(
								stParametry						:= GVL_Parametry.stSymulacja, 
								stStanyPodzespolow				:= GVL_Podzespoly.fbKrajalnica.stStanyPodzespolow,
								eTrybPracy						:= GVL_StanMaszyny.fbStanMaszyny.TrybPracy, 
								bCiecie1_Poczatek				=> GVL_Wejscia_IO.bCzujnik0C1.bSymulacja, 
								bCiecie1_Koniec					=> GVL_Wejscia_IO.bCzujnikMaxC1.bSymulacja, 
								bCiecie2_Poczatek				=> GVL_Wejscia_IO.bCzujnik0C2.bSymulacja, 
								bCiecie2_Koniec					=> GVL_Wejscia_IO.bCzujnikMaxC2.bSymulacja, 
								bPodawanieZabierakPoczatek		=> GVL_Wejscia_IO.bCzujnik0PW_Z.bSymulacja, 
								bPodawanieZabierakKoniec		=> GVL_Wejscia_IO.bCzujnikMaxPW_Z.bSymulacja, 
								bPodawaniePrzesuwaniePoczatek	=> GVL_Wejscia_IO.bCzujnik0PW_N.bSymulacja, 
								bPodawaniePrzesuwanieKoniec		=> GVL_Wejscia_IO.bCzujnikMaxPW_N.bSymulacja, 
								bCzujnikWaflaDoPodania			=> GVL_Wejscia_IO.bWafelNaWejsciu.bSymulacja, 
								bCzujnikWaflaDoCiecia1			=> GVL_Wejscia_IO.bWafelDoCiecia1.bSymulacja, 
								bCzujnikWaflaDoCiecia2			=> GVL_Wejscia_IO.bWafelDoCiecia2.bSymulacja);
								
GVL_Podzespoly.fbKrajalnica (	stParametry 					:= GVL_Parametry.stKrajalnica,
								stSterowanieSymulacja			:= fbWizualizacja.stSterowanie);

	
fbWizualizacja(
								stStanySilownikow				:= GVL_Podzespoly.fbKrajalnica.stStanyPodzespolow,
								eTrybPracy						:= GVL_StanMaszyny.fbStanMaszyny.TrybPracy,   
								bCiecie1_Poczatek				:= GVL_Wejscia_IO.bCzujnik0C1.CzyZadzialany, 
								bCiecie1_Koniec					:= GVL_Wejscia_IO.bCzujnikMaxC1.CzyZadzialany, 
								bCiecie2_Poczatek				:= GVL_Wejscia_IO.bCzujnik0C2.CzyZadzialany, 
								bCiecie2_Koniec					:= GVL_Wejscia_IO.bCzujnikMaxC2.CzyZadzialany, 
								bPodawanieZabierakPoczatek		:= GVL_Wejscia_IO.bCzujnik0PW_Z.CzyZadzialany, 
								bPodawanieZabierakKoniec		:= GVL_Wejscia_IO.bCzujnikMaxPW_Z.CzyZadzialany, 
								bPodawaniePrzesuwaniePoczatek	:= GVL_Wejscia_IO.bCzujnik0PW_N.CzyZadzialany,
								bPodawaniePrzesuwanieKoniec		:= GVL_Wejscia_IO.bCzujnikMaxPW_N.CzyZadzialany, 
								bCzujnikWaflaDoPodania			:= GVL_Wejscia_IO.bWafelNaWejsciu.CzyZadzialany, 
								bCzujnikWaflaDoCiecia1			:= GVL_Wejscia_IO.bWafelDoCiecia1.CzyZadzialany, 
								bCzujnikWaflaDoCiecia2			:= GVL_Wejscia_IO.bWafelDoCiecia2.CzyZadzialany);
						
				
							]]></ST>
    </Implementation>
    <Action Name="A_Konfiguracja" Id="{124be6a6-033b-419d-b278-24d79c8f18b6}">
      <Implementation>
        <ST><![CDATA[	GVL_StanMaszyny.fbStanMaszyny.KonfiguracjaStanowPracyDlaTrybu(
		eNrTrybu		:= E_PMLUnitMode.AUTOMATIC,  
		bClearing		:= TRUE, 
		bStopped		:= TRUE, 
		bStarting		:= TRUE, 
		bIdle			:= TRUE, 
		bSuspended		:= TRUE, 
		bExecute		:= TRUE, 
		bStopping		:= TRUE, 
		bAborting		:= TRUE, 
		bAborted		:= TRUE, 
		bHolding		:= TRUE, 
		bHeld			:= TRUE, 
		bUnholding		:= TRUE, 
		bSuspending		:= TRUE, 
		bUnsuspending	:= TRUE, 
		bResetting		:= TRUE, 
		bCompleting		:= TRUE, 
		bComplete		:= TRUE);
	GVL_StanMaszyny.fbStanMaszyny.KonfiguracjaStanowPracyDlaTrybu(
		eNrTrybu		:= E_PMLUnitMode.MANUAL, 
		bClearing		:= TRUE, 
		bStopped		:= TRUE, 
		bStarting		:= TRUE, 
		bIdle			:= TRUE, 
		bSuspended		:= FALSE, 
		bExecute		:= TRUE, 
		bStopping		:= TRUE, 
		bAborting		:= TRUE, 
		bAborted		:= TRUE, 
		bHolding		:= FALSE, 
		bHeld			:= FALSE, 
		bUnholding		:= FALSE, 
		bSuspending		:= FALSE, 
		bUnsuspending	:= FALSE, 
		bResetting		:= TRUE, 
		bCompleting		:= FALSE, 
		bComplete		:= FALSE);
	GVL_StanMaszyny.fbStanMaszyny.KonfiguracjaStanowPracyDlaTrybu(
		eNrTrybu		:= E_PMLUnitMode.SEMIAUTOMATIC, 
		bClearing		:= TRUE, 
		bStopped		:= TRUE, 
		bStarting		:= TRUE, 
		bIdle			:= TRUE, 
		bSuspended		:= FALSE, 
		bExecute		:= TRUE, 
		bStopping		:= TRUE, 
		bAborting		:= TRUE, 
		bAborted		:= TRUE, 
		bHolding		:= FALSE, 
		bHeld			:= FALSE, 
		bUnholding		:= FALSE, 
		bSuspending		:= FALSE, 
		bUnsuspending	:= FALSE, 
		bResetting		:= TRUE, 
		bCompleting		:= FALSE, 
		bComplete		:= FALSE);]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="MAIN">
      <LineId Id="6" Count="3" />
      <LineId Id="33" Count="3" />
      <LineId Id="10" Count="16" />
      <LineId Id="2" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="61" Count="2" />
      <LineId Id="90" Count="0" />
      <LineId Id="64" Count="9" />
      <LineId Id="58" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="78" Count="1" />
      <LineId Id="92" Count="0" />
      <LineId Id="80" Count="9" />
      <LineId Id="94" Count="2" />
      <LineId Id="76" Count="0" />
    </LineIds>
    <LineIds Name="MAIN.A_Konfiguracja">
      <LineId Id="2" Count="36" />
      <LineId Id="1" Count="0" />
      <LineId Id="40" Count="17" />
      <LineId Id="39" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>